data/all_generated_tests/raw_wast_tests/br_if_ImproperFunctionCallorReturnHandling_1811.wast
;; 2. **Test Description:** Use `call_indirect` within a block structure that includes a `br_if`. Verify the correct function is called based on the type signature of the target function, and monitor if an invalid function signature results in a type error.    - **Constraint:** Ensures proper type checking and lookup for indirect calls.    - **Improper Handling:** Incorrect type checks can lead to incorrect function calls.

(assert_invalid
  (module
    (type $sig (func (param i32) (result i32)))
    (table 1 funcref)
    (elem (i32.const 0) $type-fail)
    (func $type-fail (param i64) (result i64) (i64.const 0))
    (func $type-pass (param i32) (result i32) (i32.const 0))
    (func (block (call_indirect (type $sig) (i32.const 0)) (drop) (br_if 0 (i32.const 1))))
  )
  "type mismatch"
)